💩 Se agregan validaciones al formulario

--- a/src/components/molecules/ContactFormContent/ContactFormMain.astro
+++ b/src/components/molecules/ContactFormContent/ContactFormMain.astro
@@ -13,7 +13,7 @@ import Loader from "@src/components/atoms/Loader/Loader.astro";
 <Subtitle content="Get in touch with Me" />
 <form class="contact" method="POST" novalidate>
   <div class="form__group form__group-name">
-    <label for="name">Your Name: * </label>
+    <label for="name">Your Name and Last Name: * </label>
     <input type="text" id="name" name="name" required />
     <span class="error__msg" id="nameError"></span>
   </div>
