--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Social from "@src/components/organisms/Social/Social.astro";
 import Footer from "@molecules/Footer/Footer.astro";
 import { getData } from "@src/services/data";
 import ToastNotification from "@src/components/atoms/ToastNotification/ToastNotification.astro";
-const { user, skills, tools, socialIcons } = await getData();
+const { user, skills, tools } = await getData();
 ---
 
 <script>
@@ -21,7 +21,7 @@ const { user, skills, tools, socialIcons } = await getData();
 <Layout>
   <ToastNotification />
   <BackgroundGradient>
-    <Hero data={user} socialIcons={socialIcons} />
+    <Hero data={user} />
   </BackgroundGradient>
   <DividerTop />
   <About data={user} />
