--- a/src/components/organisms/About/About.astro
+++ b/src/components/organisms/About/About.astro
@@ -2,6 +2,7 @@
 import Title from "@atoms/Title/Title";
 import ButtonAbout from "@atoms/ButtonAbout/ButtonAbout.astro";
 import Calendar from "@src/components/molecules/GithubCalendar/Calendar";
+import { only } from "node:test";
 
 const { data } = Astro.props
 ---
@@ -32,5 +33,5 @@ const { data } = Astro.props
         </p>
     </div>
   </article>
-  <Calendar client:only />
+  <Calendar client:only="react" />
 </section>
