--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -35,7 +35,8 @@ import Subtitle from "@src/components/atoms/Subtitle/Subtitle.astro";
     </div>
     <div class="social__item social__item-4">
       <SocialCard >
-        <BlogPost />
+        <BlogPost server:defer
+        />
       </SocialCard>
     </div>
   </div>
