--- a/src/components/molecules/CardPortfolio/_card-portfolio.scss
+++ b/src/components/molecules/CardPortfolio/_card-portfolio.scss
@@ -8,31 +8,30 @@
   position: relative;
   box-shadow: 2px 1px 5px 1.1px rgba(0, 0, 0, 0.68);
   width: 100%;
+  &__img {
+   height: 160px;
+   width: 100%;
+   object-fit: cover;
+   -o-object-position: center 0;
+   object-position: center 0;
+   background: #000;
+   }
+   &__cara--B {
+     display: flex;
+     align-items: flex-start;
+     flex-direction: column;
+     background: #140030;
+     transform: translateY(-25px);
+     height: 247px;
+     transition: transform 0.3s linear;
+     padding: 0.2rem 2rem 0.2rem 2rem;
+     .card__title {
+       font-size: 2.1rem;
+       text-align: left;
+       @include text-gradient("ligth");
+     }
 }
-.card__img {
-  height: 160px;
-  width: 100%;
-  object-fit: cover;
-  -o-object-position: center 0;
-  object-position: center 0;
-  background: #000;
-}
-
-.card__cara--B {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  background: #140030;
-  transform: translateY(-25px);
-  height: 247px;
-  transition: transform 0.3s linear;
-  padding: 0.2rem 2rem 0.2rem 2rem;
-  .card__title {
-    font-size: 2.1rem;
-    text-align: left;
-    @include text-gradient("ligth");
-  }
-  .card__description {
+  &__description {
     width: 28rem;
     max-height: 9dvh;
     white-space: nowrap;
@@ -41,11 +40,11 @@
     height: 20px;
     transition: 0.35s height;
   }
-}
-.card__title,
-.card__description {
-  transform: translateY(-37px);
-  transition: transform 0.3s ease;
+  &__title,
+  .card__description {
+    transform: translateY(-37px);
+    transition: transform 0.3s ease;
+  }
 }
 .card:hover .card__title {
   transform: translateY(0px);
