✨ Se corrige metadescription

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,7 +4,6 @@
 import "../sass/main.scss";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 interface Props {
-  mainTitle?: string;
   title?: string;
   description?: string;
   image?: string;
@@ -13,10 +12,9 @@ interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const {
-  mainTitle= SITE_TITLE,
-  title = "Home",
+  title = SITE_TITLE,
   description = SITE_DESCRIPTION,
-  image = "img/icons/sofi-icon.webp",
+  image = "img/metaBanner.png",
 } = Astro.props;
 
 
@@ -29,7 +27,7 @@ const {
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/png" href="/img/icons/sofi-icon.webp" />
 <meta name="generator" content={Astro.generator} />
-<title>{mainTitle} | {title}</title>
+<title>{title} </title>
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
