--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,17 +3,12 @@ import ThemeIcon from "@src/components/atoms/ThemeIcon.astro";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "@molecules/Header/Header.astro";
 import ButtonToTop from "@src/components/atoms/ButtonToTop/ButtonToTop.astro";
-const pathName = Astro.url.pathname;
 
 ---
 
 <html lang="en">
   <head>
-    {
-      pathName === "/"
-        ? <BaseHead  />
-        : <BaseHead title={pathName.charAt(1).toUpperCase() + pathName.slice(2).split("/")[0]} />
-    }
+    <BaseHead />
   </head>
   <body>
     <ThemeIcon />
