--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,7 +14,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const {
   title = SITE_TITLE,
   description = SITE_DESCRIPTION,
-  image = "img/metaBannerSquare.png",
+  image = "img/metaBannerSquare.webp",
 } = Astro.props;
 
 
