🔍️ Se actualizan meta tags

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -50,6 +50,9 @@ const {
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
+<meta property="og:site_name" content={SITE_TITLE}>
+
+
 <!-- css librerias/ cdn -->
 
 <!-- Iconify CDN -->
