💥 Feat:Se agregan cardPorfolio de wordpress
Cards desde la api de wordpress

--- a/src/components/atoms/DividerBottom/_divider-bottom.scss
+++ b/src/components/atoms/DividerBottom/_divider-bottom.scss
@@ -5,6 +5,8 @@
 .wrapper{
     position: relative;
     z-index: 40;
+    min-height: 12rem;
+
 }
 .custom-shape-divider-bottom-1723178641 {
     position: absolute;
