🐛 Se corrige mapeo de cards

--- a/src/components/molecules/CardPortfolio/CardPortfolio.astro
+++ b/src/components/molecules/CardPortfolio/CardPortfolio.astro
@@ -20,8 +20,8 @@ const { title, imgSrc, demoURL, repoURL, description, skills,skillIcon } = Astro
       <h3 class="card__title">{title}</h3>
       <p class="card__description" >{description}</p>
       <div class="card__links">
-        <a href={demoURL}>ver Demo <iconify-icon icon="quill:link-out" width="15" height="15"  style="color: aqua"></iconify-icon></a>
-        <a href={repoURL}>ver Repo <iconify-icon icon="quill:link-out" width="15" height="15"  style="color: aqua"></iconify-icon></a>
+        <a href={demoURL} target="_blank" rel="noopener noreferrer nofollow ">ver Demo <iconify-icon icon="quill:link-out" width="15" height="15"  style="color: aqua"></iconify-icon></a>
+        <a href={repoURL} target="_blank" rel="noopener noreferrer nofollow ">ver Repo <iconify-icon icon="quill:link-out" width="15" height="15"  style="color: aqua"></iconify-icon></a>
       </div>
     </div>
   </div>
