--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const { user, skills, tools } = await getData();
   <Skills data={user} , skills={skills} tools={tools} />
   <DividerTop fill="shape-fill-purple " />
   <!-- <Portfolio /> -->
-  <PortfolioCopy />
+  <PortfolioCopy cardsLength={3} />
   <DividerBottom fill="shape-fill-3" />
   <Social />
   <Footer/>
