--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,10 @@ import Social from "@src/components/organisms/Social/Social.astro";
 import Footer from "@molecules/Footer/Footer.astro";
 import { getData } from "@src/services/data";
 import ToastNotification from "@src/components/atoms/ToastNotification/ToastNotification.astro";
-import PortfolioCopy from "@src/components/organisms/Portfolio/Portfolio-copy.astro";
 const { user, skills, tools } = await getData();
 ---
 
-<script >
+<script>
   import ToastNotification from "@src/controllers/toastAlerts.controller";
   setTimeout(() => {
     ToastNotification("This site is under construction 🚧🏗️", "info");
@@ -32,8 +31,8 @@ const { user, skills, tools } = await getData();
   <Skills data={user} , skills={skills} tools={tools} />
   <DividerTop fill="shape-fill-purple " />
   <!-- <Portfolio /> -->
-  <PortfolioCopy cardsLength={3} />
+  <Portfolio cardsLength={3} server:defer />
   <DividerBottom fill="shape-fill-3" />
   <Social />
-  <Footer/>
+  <Footer />
 </Layout>
