--- a/src/components/organisms/Portfolio/Portfolio.astro
+++ b/src/components/organisms/Portfolio/Portfolio.astro
@@ -27,7 +27,7 @@ const { cardsLength = 6 } = Astro.props;
 ---
 
 <section class="portfolio" id="portfolio">
-  <Title titleDesc="Portfolio" clase="title-dark" />
+  <Title titleDesc="Portfolio" clase="title-dark portfolio__title" />
   <div class="card__section">
     {
       mainData
