--- a/src/components/molecules/Footer/Footer.astro
+++ b/src/components/molecules/Footer/Footer.astro
@@ -8,8 +8,8 @@ import SocialIcons from "@src/components/atoms/SocialIcons/SocialIcons.astro";
 <footer class="footer">
     <Logo />
     <ul class="footer__list">
-        <li class="footer__item"><a href="" class="footer__link">About This Portfolio</a></li>
-        <li class="footer__item"><a href="" class="footer__link">Visit my Blog</a></li>
+        <li class="footer__item"><a href="/about" class="footer__link">About This Portfolio</a></li>
+        <li class="footer__item"><a href="https://blog.itssofi.dev/" class="footer__link" target="_blank" rel="noopener noreferrer nofollow">Visit my Blog</a></li>
     </ul>
     <SocialIcons isAnimated={false}/>
 </footer>
