--- a/src/components/molecules/CardContributor/CardContributor.astro
+++ b/src/components/molecules/CardContributor/CardContributor.astro
@@ -1,14 +1,20 @@
 ---
 const {
-  name = "SofiDev",
-  rol = "Frontend Developer,UX/UI,Backend Developer",
+  name,
+  rol,
   profilepic = "https://blog-sofi.api-wordpress.tech/contributor/sofidev/shophi/",
   banner = "https://blog-sofi.api-wordpress.tech/contributor/sofidev/andrew-goudreau-squirtle4",
   gitHub = "https://github.com/SofiDevO",
   linkedin = "https://www.linkedin.com/in/sofidev/",
   youTube = "https://www.youtube.com/@SofiDev",
-  contributorDetail
+  contributorDetail,
 } = Astro.props;
+
+console.log(rol)
+const roles = rol.join(', ');
+//  const roles = rol.toLocaleString('es', ",  ");
+console.log(roles);
+
 ---
 
 <article class="card__contributor">
@@ -16,18 +22,18 @@ const {
     class="card__contributor__banner"
     style={`background-image:url(${banner})`}
   >
+    <img
+      class="card__contributor__profile__pic"
+      src={profilepic}
+      alt={name}
+      width="200"
+    />
   </div>
-  <img
-    class="card__contributor__profile__pic"
-    src={profilepic}
-    alt={name}
-    width="200"
-  />
-  <a href={contributorDetail}>
+  <div class="card__contributor__container social__container--contributor">
     <h2 class="card__contributor__name">{name}</h2>
-  </a>
-  <div class="card__contributor__container">
-    <p class="card__contributor__rol">{rol}</p>
+
+    <p class="card__contributor__rol">{roles}</p>
+
     <div class="social__container">
       <a href={gitHub} target="_blank" rel="noopener noreferrer">
         <iconify-icon
@@ -57,5 +63,6 @@ const {
         </iconify-icon>
       </a>
     </div>
+    <a class="card__contributor__details" href={contributorDetail}> Know More </a>
   </div>
 </article>
