🐛 Problema con deploy

--- a/src/components/molecules/CardContributor/CardContributor.astro
+++ b/src/components/molecules/CardContributor/CardContributor.astro
@@ -12,8 +12,7 @@ const {
 
 console.log(rol)
 const roles = rol.join(', ');
-//  const roles = rol.toLocaleString('es', ",  ");
-console.log(roles);
+
 
 ---
 
@@ -44,7 +43,7 @@ console.log(roles);
         >
         </iconify-icon>
       </a>
-      <a href={youTube} target="_blank" rel="noopener noreferrer">
+      <a href={linkedin} target="_blank" rel="noopener noreferrer">
         <iconify-icon
           class="social__icon"
           icon="simple-icons:linkedin"
